Opened 17 years ago
Closed 17 years ago
#2036 closed bug (fixed)
develop/headers directory is not setup correctly when building install-haiku target
Reported by: | oco | Owned by: | bonefish |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Build System | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
When i build the haiku source tree with "jam install-haiku" and the Development package, some headers are not copied to the right directory :
- os headers are in /<haiku>/develop/headers/os/os
- posix headers are in /<haiku>/develop/headers/posix/posix
- cpp headers are in /<haiku>/develop/headers/cpp/cpp
It works for 3rdparty headers.
I am building under R5 with BONE.
With the same source tree, "jam haiku-image" put headers in the right place.
I was unable to find what is the difference.
Change History (2)
comment:1 by , 17 years ago
Status: | new → assigned |
---|
comment:2 by , 17 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Fixed in hrev24859. I've tested it only under Linux only, though.
Please verify. Before you do, don't forget to remove the directories first. The installation process doesn't do that; it only creates and overwrites.
Note:
See TracTickets
for help on using tickets.
I've never noticed, since installing in a directory works fine under Linux. Apparently the cause for the problem is a missing feature in copyattr. A bug in the libbe emulation under Linux covers it, though.