* Explicitly support source paths with a leaf name "." or "..". In this   case the contents of the directory shall be copied into the target   directory, not the source directory itself. This is actually a feature   the build system uses for installing in a directory, but I've only   ever tested it under Linux and there a bug in libbe_build made it work   automatically. Fixes #2036. * Removed copy and paste left-over for the "-x" and "-X" options.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@24859 a95241bf-73f2-0310-859d-f6bbb57e9c96